--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "description": "See important information of a tab before clicking on it.",
   "icons": {
     "128": "icon_128.png",
+    "48": "icon_48.png",
+    "32": "icon_32.png",
     "16": "icon_16.png"
   },
   "background": {
